sort of still working on chromedriver, almost giving up